--- a/config.toml
+++ b/config.toml
@@ -86,7 +86,7 @@ contentDir = "content/zh-cn"
 
 # Comment out if you don't want the "print entire section" link enabled.
 [outputs]
-section = ["HTML", "print", "RSS"]
+section = ["HTML", "RSS"]
 
 [params]
 copyright = "The Docsy Authors"
